conversion from Astra to Divi

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name:     Neighborhood Bids
-Theme URI:      
-Description:    Astra child theme.
-Author:         Codeable
-Author URI:     https://codeable.io
-Template:       astra
-Version:        0.1.0
+ Theme Name:   Neighborhood Bids
+ Theme URI:    https://elegantthemes.com
+ Description:  Child Theme for Divi
+ Author:       Codeable
+ Author URI:   https://codeable.com
+ Template:     Divi
+ Version:      1.0.0
 */
 
-@import "./dist/child-styles.css";
+/*****Add any custom CSS below this line*****/
