--- a/src/sass/child-styles.scss
+++ b/src/sass/child-styles.scss
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@import '../../node_modules/breakpoint-sass/stylesheets/breakpoint';
+
 // 1. Configuration and helpers
 @import
   'abstracts/variables',
@@ -9,6 +11,10 @@
 // 2. Vendors
 @import
   'vendors/normalize';
+
+// Vendor Extensions
+@import
+  'vendors-extensions/gravityforms';
 
 // 3. Base stuff
 @import
