Added Nexa font and GravityForms formatting

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -11,6 +11,8 @@
 	border-radius: 3px;
 	border-color: $color-white;
 	color: white;
+	padding: 0.375rem 1.25rem;
+    font-size: 1.25rem;
 
 	@include on-event {
 		background-color: $color-green;
@@ -26,6 +28,7 @@
 			padding: 1rem;
 			border-radius: 3px;
 			color: white;
+			font-size: 1rem;
 		}
 	}
 }
@@ -34,7 +37,7 @@
 .et_mobile_menu li {
 	&.--nav-member-button,
 	&.--nav-vendor-button {
-        text-align: center;
+		text-align: center;
 		a {
 			color: white;
 		}
