--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,7 +6,7 @@
  * Set up a decent box model on the root element
  */
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /**
@@ -18,39 +18,56 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 /**
  * Basic styles for links
  */
 a {
-  text-decoration: none;
+	text-decoration: none;
 
-  @include on-event {
-    text-decoration: underline;
-  }
+	@include on-event {
+		text-decoration: underline;
+	}
 }
-
 
 /**
  * Basic styles for Divi links
  */
 a {
+	// Remove the underline from sliders
+	&.et-pb-slider-arrow,
+	&.et-pb-arrow-prev,
+	&.et-pb-arrow-next,
+	&.et_pb_video_play,
+	&.et_pb_video_play:active,
+	&.et_pb_video_play:focus,
+	&.et_pb_video_play:hover,
+	&.et_pb_font_icon {
+		text-decoration: none;
+	}
 
-  // Remove the underline from sliders
-  &.et-pb-slider-arrow,
-  &.et-pb-arrow-prev,
-  &.et-pb-arrow-next,
-  &.et_pb_video_play,
-  &.et_pb_video_play:active,
-  &.et_pb_video_play:focus,
-  &.et_pb_video_play:hover,
-  &.et_pb_font_icon {
-    text-decoration: none;
-  }
+	@include on-event {
+		text-decoration: none;
+	}
+}
 
-  @include on-event {
-    text-decoration: none;
-  }
+
+/// Remove whitespace from the top and bottom of an element so the elements sit right on top of each other.
+.--novspace {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-bottom: 0 !important; // Overwrite theme styles in certain places
+  padding-top: 0 !important; // Overwrite theme styles in certain places
+}
+
+
+/// General style to vertically align row
+.--vertical-row-align {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
