--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -13,6 +13,7 @@
 	color: white;
 	padding: 0.375rem 1.25rem;
     font-size: 1.25rem;
+    white-space: normal;
 
 	@include on-event {
 		background-color: $color-green;
