Added font Nexa Light font option

--- a/src/sass/themes/_default.scss
+++ b/src/sass/themes/_default.scss
@@ -33,6 +33,6 @@
 
     // Add some padding to the blurb description so it's not at the edge of the white space
     .et_pb_blurb_description {
-      padding: 0 1rem 1rem 1rem;
+      padding: 0 1rem;
     }
 }
