Formatting for individual product and product search pages.

--- a/src/sass/child-styles.scss
+++ b/src/sass/child-styles.scss
@@ -14,7 +14,8 @@
 
 // Vendor Extensions
 @import
-  'vendors-extensions/gravityforms';
+  'vendors-extensions/gravityforms',
+  'vendors-extensions/woocommerce';
 
 // 3. Base stuff
 @import
