--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,3 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
+
+.__page-header .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h1 {
+	font-size: 2.6rem;
+}
