--- a/src/sass/vendors-extensions/_woocommerce.scss
+++ b/src/sass/vendors-extensions/_woocommerce.scss
@@ -27,111 +27,30 @@ body:not(.et-tb).single-product {
 	}
 }
 
-// Shop page
-.__deals-main-list {
-	ul.products {
-		li {
-			.et_shop_image,
-			.woocommerce-loop-product__title,
-			.star-rating {
-				float: left;
-				width: 30%;
-				margin-right: 3%;
-			}
-		}
-	}
-}
-
+// Deals page formatting staging2.neighborhoodbids.com/wp-admin/post.php?post=26334&action=edit
 .__deals-divi-list {
-	ul.products {
-		li.product {
-			border-radius: 3px;
-			/* border: border-width border-style (required) border-color */
-			border: 3px solid $color-green;
-			padding: 1rem !important; // Override woocommerce style
-
-			.et_shop_image {
-				float: left;
-				width: 47%;
-				margin-right: 3%;
-			}
-
-			.woocommerce-loop-product__title {
-			}
-
-			.star-rating {
-				width: auto !important; // Override woocommerce style
-				&::before,
-				span::before {
-					float: none;
-					left: 0;
-					right: 0;
-				}
-			}
-		}
+	h1 {
+		color: $color-green;
 	}
-}
-
-.__deals-category-links {
-	.woocommerce ul.products li {
-		&.product a img {
-			display: none;
-		}
-
-		&.product-category {
-			margin: 0;
-			text-align: left;
-		}
-	}
-}
-
-// Shop shortcode
-#wcpt-26055 {
-	table.wcpt-table {
-		border-collapse: separate;
-		border-spacing: 0 1rem;
-		border: none;
-	}
-
-	.wcpt-row {
-		margin-bottom: 2rem;
-		background-color: transparent;
-
-		border-radius: 3px;
-		/* border: border-width border-style (required) border-color */
-
-		td {
-			border-bottom: 3px solid $color-green !important; // Override theme style
-			border-top: 3px solid $color-green !important; // Override theme style
-			padding: 0 1rem;
-			width: 40%;
-			&:last-child {
-				border-right: 3px solid $color-green !important; // Override theme style
-				padding: 0;
-				width: 20%;
-			}
-
-			.wcpt-title {
-				font-weight: bold;
-			}
-
-			.wcpt-product-image-wrapper {
-				max-height: none;
-				max-width: none;
-			}
-
-			&:first-child {
-				border-left: 3px solid $color-green !important; // Override theme style
-			}
-		}
-	}
-
-	.wcpt-average-rating,
-	.wcpt-review-count {
+	.price + p {
 		display: none;
 	}
 
-	.wcpt-star svg {
-		color: $color-green;
+	.star-rating.wc_views_star_rating {
+		margin-bottom: 20px;
+		text-align: center;
+		width: auto !important; // Override woocommerce style
+		& > span {
+			overflow: unset;
+		}
+		&::before,
+		span::before {
+			float: none;
+			left: 0;
+			right: 0;
+		}
+	}
+	.button {
+		text-align: center;
 	}
 }
