Hide the first date on the individual product pages and change sub headers format

--- a/src/sass/vendors-extensions/_woocommerce.scss
+++ b/src/sass/vendors-extensions/_woocommerce.scss
@@ -62,3 +62,9 @@ body:not(.et-tb).single-product {
 		text-align: right;
 	}
 }
+
+
+// Hide First Payment Date
+.first-payment-date {
+  display: none;
+}
