--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -2,9 +2,19 @@
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
 
-.__page-header .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h1 {
-	font-size: 2.6rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-shadow: 0.08em 0.08em 0.08em rgba(0, 0, 0, 0.4);
+.__page-header
+	.et_pb_fullwidth_header_0.et_pb_fullwidth_header
+	.header-content {
+
+	h1 {
+		font-size: 2.6rem;
+		font-weight: bold;
+		text-transform: uppercase;
+		text-shadow: 0.08em 0.08em 0.08em rgba(0, 0, 0, 0.4);
+	}
+
+	.et_pb_fullwidth_header_subhead {
+		font-size: 1.875rem;
+		font-weight: 600;
+	}
 }
