Removed hidding the variant pricing

--- a/src/sass/pages/_single-product.scss
+++ b/src/sass/pages/_single-product.scss
@@ -1,7 +1,11 @@
 body.single-product {
-	.woocommerce-variation.single_variation {
-		.woocommerce-variation-price, .woocommerce-variation-description, .woocommerce-variation-availability {
-			display: none;
-		}
-	}
+	// .woocommerce-variation.single_variation {
+	// 	.woocommerce-variation-price, .woocommerce-variation-description, .woocommerce-variation-availability {
+	// 		display: none;
+	// 	}
+	// }
+
+	// .woocommerce-variation-add-to-cart .efw-fee-notice {
+	// 	display: none;
+	// }
 }
